--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,6 @@ spring.datasource.url = jdbc:mysql://localhost:3306/ItalianCitizenshipReview?ser
 spring.datasource.username = root
 spring.datasource.password = Tonyisthebest
 
-
-
-
 # none, create, create-drop, update
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
@@ -18,3 +15,5 @@ spring.security.user.name=admin
 spring.security.user.password=passw@rd
 
 logging.level.org.springframework.security=DEBUG
+
+spring.security.ignored=/**
