added section for why citizenship is beneficial

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://root:8E4ecQBAZTa85LB9tuam@containers-us-west-139.railway.app:5932/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/ItalianCitizenshipReview?serverTimezone=UTC
 spring.datasource.username = root
-spring.datasource.password = 8E4ecQBAZTa85LB9tuam
+spring.datasource.password = Tonyisthebest
+
 
 # none, create, create-drop, update
 spring.jpa.hibernate.ddl-auto = update
