--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,10 @@ spring.security.user.password=passw@rd
 logging.level.org.springframework.security=DEBUG
 
 spring.security.ignored=/**
+
+spring.mail.host=email-smtp.us-east-1.amazonaws.com
+spring.mail.port=587
+spring.mail.username=AKIAYMD65WOMVNTQPGE7
+spring.mail.password=BP+Hpsv0Y5U5p+h8tu0nPuCN6ByfSz6UiMUG2lQigFh4
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
