--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,7 @@ cmake-build-*/
 *.iws
 
 # IntelliJ
+dataset_facebook-reviews-scraper_2023-08-23_15-00-01-955.json
 out/
 
 # mpeltonen/sbt-idea plugin
